--- a/css/style.css
+++ b/css/style.css
@@ -2,59 +2,57 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
-* p {
-  color: #6E6F6F;
-  font-size: 17px;
-}
-
 .elementor {
   background-image: url(https://thepixelcurve.com/wp/lmsmart/lp/wp-content/uploads/sites/2/2022/01/TOIP036.jpeg);
-  background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  max-height: 900px;
-  padding: 40px;
-}
-
-.elementor h2 {
-  color: #141948;
-  font-size: 30px;
+  height: 430px;
+  padding: 30px;
 }
 
 .elementor .textelement {
-  width: 70%;
-  padding: 40px;
-  margin-left: 40px;
+  padding: 0 25px;
+}
+
+.elementor .textelement p {
+  font-size: 18px;
+  color: #666666;
 }
 
 .elementor .textelement .staricon {
-  padding: 40px 0;
+  padding: 20px 0;
 }
 
 .elementor .textelement .staricon i {
-  color: #FFD24D;
+  font-size: 15px;
+  color: #ffb60a;
 }
 
-.elementor .textelement h2 {
+.elementor .textelement h1 {
   font-weight: bold;
   color: #141948;
-  font-size: 40px;
-  padding-bottom: 40px;
-}
-
-.elementor img {
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  font-size: 36px;
+  padding-bottom: 15px;
 }
 
 .elementor .devkoss {
-  padding-top: 40px;
+  padding-top: 20px;
+}
+
+.elementor .devkoss img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-left: 10px;
 }
 
 .elementor span {
-  font-size: 17px;
+  font-size: 15px;
   padding: 0 10px;
+}
+
+.elementor span.boldst {
+  font-weight: 600;
 }
 
 .elementor span.devon {
@@ -65,72 +63,226 @@
   color: #3BBCA7;
 }
 
-.overView {
-  background-color: transparent;
-  padding-top: 40px;
-}
-
-.overView .leftOver ul.reviOv {
+.thtorial .alltutorial .leftorial {
   padding: 20px 0;
 }
 
-.overView .leftOver ul.reviOv li {
+.thtorial .alltutorial .leftorial ul {
+  padding-bottom: 20px;
+  border-bottom: 3px solid #f6f7f9;
+}
+
+.thtorial .alltutorial .leftorial ul li {
   margin-left: 40px;
-  text-decoration: none;
+  cursor: pointer;
+  padding-bottom: 10px;
+}
+
+.thtorial .alltutorial .leftorial ul li h4 {
   color: #ababab;
   font-size: 20px;
   font-weight: 600;
   cursor: pointer;
 }
 
-.overView .firstov .whatWill {
-  margin-top: 40px;
-  background-color: #f6f7f9;
-  padding: 40px;
+.thtorial .alltutorial .leftorial .tbover {
+  display: none;
 }
 
-.overView .firstov .whatWill h3 {
+.thtorial .alltutorial .leftorial .tbover.active {
+  display: block;
+}
+
+.thtorial .alltutorial .leftorial .overbox .overTopp {
+  margin: 30px;
+}
+
+.thtorial .alltutorial .leftorial .overbox .overTopp p {
+  color: #6E6F6F;
+  font-size: 17px;
+}
+
+.thtorial .alltutorial .leftorial .overbox .overbottomm {
+  margin-top: 30px;
+  background-color: #f6f7f9;
+  padding: 20px 10px;
+}
+
+.thtorial .alltutorial .leftorial .overbox .overbottomm h3 {
   font-weight: bold;
   color: #141948;
   font-size: 24px;
   padding: 20px 0;
 }
 
-.overView .firstov .whatWill ul li {
-  line-height: 30px;
+.thtorial .alltutorial .leftorial .overbox .overbottomm ul li {
+  line-height: 25px;
   color: #6E6F6F;
 }
 
-.overView .firstov .whatWill i {
+.thtorial .alltutorial .leftorial .overbox .overbottomm ul li i {
   font-weight: 700;
   font-size: 13px;
 }
 
-.overView .firstov .whatWill span.checkText {
+.thtorial .alltutorial .leftorial .overbox .overbottomm ul li span.checkText {
   padding-left: 30px;
 }
 
-.rightOver {
-  margin-left: 40px;
-  width: 85%;
-  -webkit-box-shadow: 5px 0px 15px 0px #aeaeae;
-          box-shadow: 5px 0px 15px 0px #aeaeae;
-  -webkit-transform: translateY(-30%);
-          transform: translateY(-30%);
-  padding-bottom: 20px;
-  position: -webkit-sticky;
-  position: sticky;
-  bottom: -30%;
+.thtorial .alltutorial .leftorial .curbox {
+  background-color: red;
 }
 
-.rightOver .clientSay img {
+.thtorial .alltutorial .leftorial .insbox {
+  padding-top: 30px;
+}
+
+.thtorial .alltutorial .leftorial .insbox h4 {
+  color: #072F60;
+  font-weight: 600;
+}
+
+.thtorial .alltutorial .leftorial .insbox img {
+  border-radius: 50%;
+}
+
+.thtorial .alltutorial .leftorial .insbox p {
+  color: #666666;
+  font-size: 18px;
+}
+
+.thtorial .alltutorial .leftorial .insbox i {
+  margin: 20px 5px;
+  text-align: center;
+  border: 1px solid #eaeaea;
+  color: #6E6F6F;
+  border-radius: 50%;
+  padding: 5px 7px;
+}
+
+.thtorial .alltutorial .leftorial .revbox {
+  margin-top: 20px;
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttal {
+  text-align: center;
+  -webkit-box-shadow: 5px 0px 15px 0px #aeaeae;
+          box-shadow: 5px 0px 15px 0px #aeaeae;
+  padding: 20px 0;
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttal h2 {
+  color: #072F60;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttal .staricon {
+  padding: 20px 0;
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttal .staricon i {
+  font-size: 20px;
+  color: #ffb60a;
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttal span {
+  color: #6E6F6F;
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttel i {
+  color: #ffb60a;
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttel .vbox {
+  margin: 20px 0;
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttel .vbox .mdn {
+  margin-top: 8px;
+  height: 8px;
+  background-color: rgba(144, 142, 142, 0.184);
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttel .vbox .mdn .wcolor1 {
+  width: 100%;
+  height: 100%;
+  background-color: #ffb60a;
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttel .vbox .mdn .wcolor2 {
+  width: 0%;
+  height: 100%;
+  background-color: #ffb60a;
+}
+
+.thtorial .alltutorial .leftorial .revbox .ttel .vbox .right {
+  color: #ababab;
+}
+
+.thtorial .alltutorial .leftorial .revbox .revcom {
+  margin: 40px 0;
+}
+
+.thtorial .alltutorial .leftorial .revbox .revcom h3 {
+  color: #072F60;
+  font-weight: 600;
+}
+
+.thtorial .alltutorial .leftorial .revbox .revcom .rowbox {
+  margin: 40px 0;
+  padding-top: 40px;
+  border-bottom: 1px solid #eaeaea;
+}
+
+.thtorial .alltutorial .leftorial .revbox .revcom .rowbox img {
+  border-radius: 50%;
+}
+
+.thtorial .alltutorial .leftorial .revbox .revcom .rowbox h4 {
+  color: #072F60;
+  font-weight: 600;
+}
+
+.thtorial .alltutorial .leftorial .revbox .revcom .rowbox i {
+  font-size: 15px;
+  color: #ffb60a;
+}
+
+.thtorial .alltutorial .leftorial .revbox .revcom .rowbox p {
+  padding: 20px 0;
+}
+
+.thtorial .alltutorial .leftorial .revbox .revcom .rowbox span {
+  color: #072F60;
+  font-weight: 600;
+}
+
+.thtorial .alltutorial .rightorial {
+  width: 85%;
+  -webkit-transform: translateY(-90px);
+          transform: translateY(-90px);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  -webkit-box-shadow: 5px 0px 15px 0px #aeaeae;
+          box-shadow: 5px 0px 15px 0px #aeaeae;
+  padding-bottom: 20px;
+  border-radius: 5px;
+}
+
+.thtorial .alltutorial .rightorial .clivideo {
   position: relative;
 }
 
-.rightOver .clientSay i {
+.thtorial .alltutorial .rightorial .clivideo img {
+  border-radius: 5px;
+}
+
+.thtorial .alltutorial .rightorial .clivideo i {
   position: absolute;
-  top: 12%;
-  left: 40%;
+  bottom: 30%;
+  right: 45%;
   background-color: white;
   border-radius: 50%;
   padding: 20px 22px;
@@ -139,34 +291,35 @@
   color: #072F60;
 }
 
-.rightOver .clientSay i:hover {
+.thtorial .alltutorial .rightorial .clivideo i:hover {
   color: #3BBCA7;
 }
 
-.rightOver p {
+.thtorial .alltutorial .rightorial p {
   display: inline-block;
   color: #072F60;
   font-size: 30px;
   font-weight: 650;
   margin: 10px 30px;
+  padding: 20px 0;
 }
 
-.rightOver span {
+.thtorial .alltutorial .rightorial span {
   display: block;
 }
 
-.rightOver .vieWcart {
+.thtorial .alltutorial .rightorial .vieWcart {
   background-color: #3BBCA7;
   color: white;
   width: 80%;
   padding: 10px;
-  margin: 20px auto;
+  margin: 30px auto;
   font-weight: 600;
   border-radius: 3px;
   text-align: center;
 }
 
-.rightOver .duration {
+.thtorial .alltutorial .rightorial .duration {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -177,29 +330,39 @@
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin: 20px 0;
+  margin: 10px 0;
 }
 
-.rightOver .duration i {
+.thtorial .alltutorial .rightorial .duration i {
   margin-right: 5px;
   font-size: 18px;
 }
 
-.rightOver hr {
+.thtorial .alltutorial .rightorial hr {
   margin: auto;
   height: 2px;
   width: 65%;
   color: #ebebeb;
 }
 
-.rightOver .shareThis {
-  margin: 15px 40px;
+.thtorial .alltutorial .rightorial .shareThis {
+  margin: 20px 40px;
   color: #3BBCA7;
   border: 2px solid #3BBCA7;
   padding: 10px;
   border-radius: 5px;
   width: 75%;
   background-color: white;
+}
+
+@media (max-width: 768px) {
+  .elementor h1 {
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .elementor p {
+    font-size: 12px;
+  }
 }
 
 * a {
@@ -249,6 +412,7 @@
 }
 
 .stylecol .fredHyman {
+  border-radius: 5px;
   -webkit-box-shadow: 5px 0px 10px 0px #aeaeae;
           box-shadow: 5px 0px 10px 0px #aeaeae;
   margin: 40px 0;
@@ -257,21 +421,6 @@
 
 .stylecol .fredHyman img {
   border-radius: 5px;
-}
-
-.stylecol .fredHyman img.faPlay {
-  position: relative;
-}
-
-.stylecol .fredHyman .fapIcon {
-  position: absolute;
-  bottom: 20%;
-  left: 70%;
-  color: #072F60;
-  background-color: white;
-  border-radius: 50%;
-  padding: 20px 22px;
-  font-size: 20px;
 }
 
 .stylecol .fredHyman .textHyman {
@@ -290,11 +439,71 @@
   margin-left: 10px;
 }
 
+.stylecol .fredHyman .textHyman span i {
+  color: #3BBCA7;
+}
+
 .stylecol .fredHyman .textHyman span:hover {
   color: #3BBCA7;
 }
 
 .stylecol .fredHyman .textHyman span.readmore {
+  color: #3BBCA7;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.stylecol .fredHymanplay {
+  border-radius: 5px;
+  -webkit-box-shadow: 5px 0px 10px 0px #aeaeae;
+          box-shadow: 5px 0px 10px 0px #aeaeae;
+  margin: 40px 0;
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.stylecol .fredHymanplay img {
+  border-radius: 5px;
+}
+
+.stylecol .fredHymanplay .fapIcon {
+  -webkit-transform: translateX();
+          transform: translateX();
+  position: absolute;
+  bottom: 65%;
+  right: 45%;
+  color: #072F60;
+  background-color: white;
+  border-radius: 50%;
+  padding: 20px 22px;
+  font-size: 20px;
+}
+
+.stylecol .fredHymanplay .textHyman {
+  padding: 30px;
+}
+
+.stylecol .fredHymanplay .textHyman h3 {
+  color: #072F60;
+  font-weight: 700;
+  font-size: 25px;
+  padding: 10px 0;
+}
+
+.stylecol .fredHymanplay .textHyman span {
+  color: #ababab;
+  margin-left: 10px;
+}
+
+.stylecol .fredHymanplay .textHyman span i {
+  color: #3BBCA7;
+}
+
+.stylecol .fredHymanplay .textHyman span:hover {
+  color: #3BBCA7;
+}
+
+.stylecol .fredHymanplay .textHyman span.readmore {
   color: #3BBCA7;
   font-weight: bold;
   font-size: 12px;
@@ -306,14 +515,14 @@
 }
 
 .stylecol .botstyle i {
-  margin-left: 10px;
+  margin-left: 12px;
   color: #6E6F6F;
-  font-size: 15px;
+  font-size: 10px;
 }
 
 .stylecol .botstyle span {
   margin-left: 10px;
-  font-weight: 600;
+  font-weight: 620;
   font-size: 16px;
   color: #6E6F6F;
   cursor: pointer;
@@ -400,7 +609,10 @@
 }
 
 .worldClass .natright {
-  margin-left: 30px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  width: 90%;
 }
 
 .worldClass .natright .writeKey {
@@ -415,10 +627,13 @@
 .worldClass .natright .writeKey input {
   border: none;
   background-color: #f6f7f9;
+  border-radius: 3px;
 }
 
 .worldClass .natright .writeKey input.placeholder {
+  font-size: 15px;
   color: #f6f7f9;
+  padding: 10px;
 }
 
 .worldClass .natright .recent {
@@ -480,26 +695,6 @@
   background-color: #3BBCA7;
 }
 
-.tagsBalance .relatedposts {
-  margin-top: 40px;
-}
-
-.tagsBalance .relatedposts h2 {
-  font-weight: 6o0;
-  color: #072F60;
-}
-
-.tagsBalance .relatedposts .relpost {
-  -webkit-box-shadow: 5px 0px 10px 0px #aeaeae;
-          box-shadow: 5px 0px 10px 0px #aeaeae;
-  margin: 40px 0;
-  padding-bottom: 20px;
-}
-
-.tagsBalance .relatedposts .relpost img {
-  border-radius: 5px;
-}
-
 .tagsBalance .buildCar {
   margin-top: 40px;
   background-color: #F6F7F9;
@@ -522,7 +717,54 @@
   margin: 0 10px;
 }
 
-.tagsBalance span {
+.tagsBalance .relatedposts {
+  margin-top: 30px;
+}
+
+.tagsBalance .relatedposts h3 {
+  font-weight: 600;
+  color: #072F60;
+  font-size: 20px;
+  padding: 5px 0;
+}
+
+.tagsBalance .relatedposts .relpost {
+  -webkit-box-shadow: 5px 0px 10px 0px #aeaeae;
+          box-shadow: 5px 0px 10px 0px #aeaeae;
+  margin: 40px 0;
+  padding-bottom: 20px;
+  border-radius: 5px;
+}
+
+.tagsBalance .relatedposts .relpost img {
+  border-radius: 5px;
+}
+
+.tagsBalance .relatedposts .relpost .textrel {
+  padding: 10px 15px;
+}
+
+.tagsBalance .relatedposts .relpost .textrel i {
+  color: #3BBCA7;
+}
+
+.tagsBalance .relatedposts .relpost .textrel span {
+  font-weight: 600;
+  color: #6E6F6F;
+}
+
+.tagsBalance .relatedposts .relpost .textrel span.readmore {
+  color: #3BBCA7;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.tagsBalance .leftTags {
+  padding-top: 40px;
+  margin-top: 40px;
+}
+
+.tagsBalance .leftTags span {
   display: inline-block;
   color: #666666;
   background-color: #f6f7f9;
@@ -533,21 +775,16 @@
   font-weight: 600;
 }
 
-.tagsBalance span:hover {
+.tagsBalance .leftTags span:hover {
   color: white;
   background-color: #3BBCA7;
 }
 
-.tagsBalance span.ttags {
+.tagsBalance .leftTags span.ttags {
   color: #072F60;
   font-weight: 700;
   font-size: 15px;
   background: none;
-}
-
-.tagsBalance .leftTags {
-  padding-top: 40px;
-  margin-top: 40px;
 }
 
 .tagsBalance .leftTags .soctag span {
@@ -574,12 +811,174 @@
   background-color: #1988BC;
 }
 
-.tagsBalance .rightAlltags {
-  margin-right: 30px;
+.tagsBalance .comments02 {
+  margin-top: 20px;
 }
 
-.tagsBalance .rightAlltags .rightTags {
-  margin-left: 22px;
+.tagsBalance .comments02 h2 {
+  color: #072F60;
+  font-weight: 700;
+}
+
+.tagsBalance .comments02 .combox {
+  padding: 20px 0;
+}
+
+.tagsBalance .comments02 .combox.kevin {
+  padding-left: 30px;
+  border-top: 2px solid #eaeaea;
+}
+
+.tagsBalance .comments02 .combox h5 {
+  color: #072F60;
+  font-weight: 600;
+  padding: 5px 0;
+}
+
+.tagsBalance .comments02 .combox p {
+  color: #666666;
+  font-size: 15px;
+  padding-top: 5px;
+}
+
+.tagsBalance .comments02 .combox img {
+  border-radius: 50%;
+}
+
+.tagsBalance .comments02 .combox span {
+  color: #838383;
+}
+
+.tagsBalance .comments02 .combox span.repp {
+  font-weight: 600;
+  color: #3BBCA7;
+  border-radius: 5px;
+  padding: 0 5px;
+  background-color: whitesmoke;
+}
+
+.tagsBalance .comments02 .combox span.repp:hover {
+  color: white;
+  background-color: #3BBCA7;
+}
+
+.tagsBalance .comments02 .rightAlltags {
+  width: 85%;
+  margin-left: 13px;
+}
+
+.tagsBalance .comments02 .rightAlltags span {
+  display: inline-block;
+  color: #666666;
+  background-color: #f6f7f9;
+  padding: 6px;
+  margin: 5px;
+  border-radius: 5px;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.tagsBalance .comments02 .rightAlltags span:hover {
+  color: white;
+  background-color: #3BBCA7;
+}
+
+.tagsBalance .comments02 .rightAlltags span.ttags {
+  color: #072F60;
+  font-weight: 700;
+  font-size: 15px;
+  background: none;
+}
+
+.tagsBalance .comments02 .rightAlltags .whStay {
+  margin-top: 20px;
+  text-align: center;
+  background-color: #EAF3F8;
+}
+
+.tagsBalance .comments02 .rightAlltags .whStay .textWh {
+  padding: 40px 10px;
+}
+
+.tagsBalance .comments02 .rightAlltags .whStay span {
+  color: white;
+  background-color: #3BBCA7;
+  padding: 15px 25px;
+  margin-top: 20px;
+}
+
+.tagsBalance .leavrep {
+  background-color: #f6f7f9;
+  padding: 20px;
+  margin-top: 10px;
+}
+
+.tagsBalance .leavrep p {
+  color: #666666;
+}
+
+.tagsBalance .leavrep h3 {
+  color: #072F60;
+  font-weight: 650;
+}
+
+.tagsBalance .leavrep input {
+  width: 100%;
+  margin: 15px 0;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 3px;
+}
+
+.tagsBalance .leavrep input::-webkit-input-placeholder {
+  font-size: 15px;
+}
+
+.tagsBalance .leavrep input:-ms-input-placeholder {
+  font-size: 15px;
+}
+
+.tagsBalance .leavrep input::-ms-input-placeholder {
+  font-size: 15px;
+}
+
+.tagsBalance .leavrep input::placeholder {
+  font-size: 15px;
+}
+
+.tagsBalance .leavrep input.comm {
+  padding: 35px 30px;
+}
+
+.tagsBalance .rightAlltags {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  width: 85%;
+  margin-left: 13px;
+}
+
+.tagsBalance .rightAlltags span {
+  display: inline-block;
+  color: #666666;
+  background-color: #f6f7f9;
+  padding: 6px;
+  margin: 5px;
+  border-radius: 5px;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.tagsBalance .rightAlltags span:hover {
+  color: white;
+  background-color: #3BBCA7;
+}
+
+.tagsBalance .rightAlltags span.ttags {
+  color: #072F60;
+  font-weight: 700;
+  font-size: 15px;
+  background: none;
 }
 
 .tagsBalance .rightAlltags .whStay {
